# interview-platform

msmlxfpt/: .gitignore  DEPLOYMENT.md  Dockerfile  GITHUB_DEPLOY.md  conftest.py  docker-compose.yml  init_data.py  init_db.py  main.py  nginx.conf  pyproject.toml  railway.toml  render.yaml  requirements.txt  start.bat  start.sh  start_production.sh  test_flow.py  可行性分析报告.md  需求分析报告.md  项目建议书.md  项目计划书.md
msmlxfpt/app/: __init__.py  database.py  models.py  schemas.py  utils.py
msmlxfpt/app/middleware/: error_handler.py
msmlxfpt/app/routes/: __init__.py  assessment.py  auth.py  enterprise.py  interview.py  learning.py  profile.py  questions.py  resume.py
msmlxfpt/app/templates/: index.html  swagger_ui.html
msmlxfpt/tests/: test_assessment.py  test_auth.py  test_interview.py  test_questions.py
