[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-platform"
version = "1.0.0"
description = "AI驱动的面试模拟训练平台"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.95.2",
    "uvicorn==0.24.0",
    "sqlalchemy>=2.0.25",
    "pydantic<2",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "python-dotenv==1.0.0",
    "aiofiles==23.2.1",
    "jinja2==3.1.2",
    "markdown==3.5.1"
]

[scripts]
start = "uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"
